<resources>
    <string name="app_name">TaskManager</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Otkazi</string>
    <string name="newTask">Novi Zadatak</string>
    <string name="statistics">Statistika</string>


    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="tellow">Yellow</string>


    <string name="save">Sacuvaj</string>
    <string name="delete">Obrisi</string>

    <string name="today">Danas</string>
    <string name="tommorow">Sutra</string>

    <string name="id">id</string>

</resources>
